# ConfInfer

./: README.md
CI-CA/: CMakeLists.txt
CI-CA/core/: Layer.cc
CI-CA/core/ops/: convolution.cc  pool.cc
CI-CA/include/Kernel/: trustinfer.h
CI-CA/include/Kernel/backend/: backend.h
CI-CA/include/Kernel/core/: Param.h
CI-CA/include/Kernel/core/ops/: convolution.h  ops.h
CI-CA/include/Kernel/generic/: utils.h
CI-CA/include/Kernel/logger/: logger.h
Kernel/: CMakeLists.txt
Kernel/Logger/: logger.cc
Kernel/backend/: backend.cc
Kernel/core/: Graph.cc  Network.cc  threads.cc  utils.cc
Kernel/include/Kernel/: All.h  trustinfer.h
Kernel/include/Kernel/core/: Graph.h  Layer.h  Network.h  threads.h
Kernel/include/Kernel/core/ops/: pool.h
Kernel/include/Kernel/generic/: Singleton.h  templateList.h
Kernel/include/Kernel/logger/: logger.h
example/HPC-ML/: gemm_bench_a.cpp  gemm_bench_x  gemm_bench_x.cpp
example/demo/: CMakeLists.txt  demo.cc
